# agent-identity

./: .dockerignore  .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  agentdid  compose.yml  discovery.py  gate.py  main_patch.py  main_patch_phase2.py  oidc.py  oidc_router.py  requirements-phase1.txt  saml.py  saml_router.py  scim_router.py  session_router.py  test_phase1_identity_hardening.py
.github/workflows/: container-publish.yml  docker-publish.yml  pages.yml
app/: db_models.py  lifecycle.py  main.py  migrations.py  schemas.py  services.py
app/approval/: gate.py
app/auth/: __init__.py
app/integrations/: agent_auth.py
app/routers/: authorization.py
app/scim/: db.py  schema.py
app/ssf/: emitter.py
app/static/: app.css  app.js  index.html
docs/: agent-id-spec.md  agent-identity-overview.md  api-reference.md  compatibility.md  entra-blueprint-alignment.md  get-started.md  how-to-guide.md  lifecycle-management.md  openid-alignment.md  product-documentation.md
examples/blueprints/: agent-with-inheritable-permissions.json  basic-agent-blueprint.json  multitenant-blueprint-principal.json
examples/did-methods/: did-key-agent.yaml  did-web-agent.yaml
schemas/: agent-id-record.yaml  component.schema.json
scripts/: start.sh  validate.sh
sdk/python/: README.md  pyproject.toml
sdk/python/agentdid_sdk/: __init__.py  client.py  models.py
tests/: test_agent_auth_caas_integration.py  test_blueprints.py  test_examples.py  test_lifecycle_management.py  test_phase2_scim_lifecycle.py  test_python_sdk.py  test_saas_api.py
(+22 files in other folders)
